cabal-version:       2.4

name:                terrainShow
version:             0.1.0.0
synopsis:            Basic terrain generation and display via shaded mesh. To be basis for future projects.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Eric Osburn
maintainer:          osburn.eric@gmail.com
category:            Graphics
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  exposed-modules:
    Terrain
-- other-modules:
  build-depends:
    base == 4.*

executable terrainShow
  hs-source-dirs:
    src
  main-is:
    Main.hs
  build-depends:
    base == 4.*,
    terrainShow,
    OpenGL == 3.*,
    GLFW-b == 3.*,
    GLUtil == 0.10.*
  other-modules:
    Bindings, Display, Shape, GLMatrix
  default-language:
    Haskell2010
